Fix modal not showing and button dissapearing on click

--- a/style.css
+++ b/style.css
@@ -152,3 +152,39 @@ div.cloneForm {
   height: fit-content;
   min-width: auto;
 }
+
+.modal {
+  display: none;
+  position: flex; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 10px; /* Location of the box */
+  left: 40rem;
+  top: 30rem;
+  width: 30%; /* Full width */
+  height: 10%; /* Full height */
+  overflow: auto;
+  background-color: rgb(255, 255, 255); /* Fallback color */
+  background-color: rgba(231, 68, 68, 0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
